--- a/static/css/templatemo-onix-digital.css
+++ b/static/css/templatemo-onix-digital.css
@@ -321,22 +321,63 @@ header
 }
 
 .header-area .main-nav {
-  min-height: 80px;
+  min-height: 100px;
   background: transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header-area .main-nav .logo {
   line-height: 100px;
-  color: #fff;
-  font-size: 28px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  float: left;
+}
+
+.header-area .main-nav .nav {
+  float: right;
+  margin-top: 30px;
+  margin-right: 0;
+  background-color: transparent;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
+  position: relative;
+  z-index: 999;
+}
+
+.header-area .main-nav .nav li {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.header-area .main-nav .nav li:last-child {
+  padding-right: 0;
+}
+
+@media (max-width: 992px) {
+  .header-area .main-nav {
+    padding: 0 15px;
+  }
+  
+  .header-area .main-nav .logo {
+    flex: 0 0 auto;
+  }
+  
+  .header-area .main-nav .nav {
+    display: none;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+    margin: 0;
+    width: 100%;
+    background: #fff;
+    text-align: center;
+  }
+  
+  .header-area .main-nav .nav.active {
+    display: block;
+  }
 }
 
 .background-header .main-nav .logo {
@@ -350,6 +391,7 @@ header
 .header-area .main-nav .nav {
   float: right;
   margin-top: 30px;
+  margin-left: 0px;
   margin-right: 0px;
   background-color: transparent;
   -webkit-transition: all 0.3s ease 0s;
@@ -2021,5 +2063,47 @@ responsive
   }
   .contact-us .info span {
     margin-bottom: 20px;
+  }
+}
+
+/* 
+---------------------------------------------
+header
+--------------------------------------------- 
+*/
+
+.background-header .header-area .main-nav .logo,
+.background-header .header-area .main-nav .nav {
+  margin-top: 0px;
+}
+
+.header-area .main-nav .logo {
+  line-height: 80px;
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+}
+
+.header-area .main-nav .logo img {
+  max-height: 80px;
+  width: auto;
+  object-fit: contain;
+}
+
+.header-area .main-nav {
+  display: flex;
+  align-items: center;
+  min-height: 80px;
+}
+
+.header-area .main-nav .nav {
+  display: flex;
+  align-items: center;
+  margin-top: 0;
+}
+
+@media (max-width: 992px) {
+  .header-area .main-nav .logo img {
+    max-height: 60px;
   }
 }
