--- a/templates/index.html
+++ b/templates/index.html
@@ -152,14 +152,8 @@
           box-shadow: 0 4px 15px rgba(74, 144, 226, 0.2);
       }
     </style>
-<!--
-
-TemplateMo 565 Onix Digital
-
-https://templatemo.com/tm-565-onix-digital
-
--->
   </head>
+<!--TemplateMo 565 Onix Digital https://templatemo.com/tm-565-onix-digital-->  
 
 <body>
 
