--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -236,7 +236,7 @@
     </style>
 </head>
 
-<>
+<body>
     <!-- ***** Preloader Start ***** -->
     <div id="js-preloader" class="js-preloader">
         <div class="preloader-inner">
@@ -369,54 +369,53 @@
               </div>
             </div>
             <div class="col-lg-5 align-self-center">
-              <form id="contact" action="" method="get">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <input type="name" name="name" id="name" placeholder="Name" autocomplete="on" required>
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on" required>
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email"
-                        required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <input type="text" name="website" id="website" placeholder="Leave Comments" required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <button type="submit" id="form-submit" class="main-button">Submit Request</button>
-                    </fieldset>
-                  </div>
-                </div>
-              </form>
+                <form id="contact" action="" method="get">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <input type="name" name="name" id="name" placeholder="Name" autocomplete="on" required>
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on" required>
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <input type="text" name="website" id="website" placeholder="Leave Comments" required="">
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <button type="submit" id="form-submit" class="main-button">Submit Request</button>
+                            </fieldset>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
+    </div>    
+    <div class="footer-dec">
+        <img src="static/images/footer-dec.png" alt="">
     </div>
-<div class="footer-dec">
-    <img src="static/images/footer-dec.png" alt="">
-</div>
 
-<footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="copyright">
-            <p>Copyright © 2025 DIGIPODIUM | All Rights Reserved.</p>
-          </div>
-        </div>  
-      </div>
-    </div>
-</footer>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="copyright">
+                        <p>Copyright © 2025 DIGIPODIUM | All Rights Reserved.</p>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </footer>
 
     <!-- Scripts -->
     <script src="static/vendor/jquery/jquery.min.js"></script>
