--- a/templates/login.html
+++ b/templates/login.html
@@ -253,16 +253,16 @@
                 <li class="scroll-to-section"><a href="register">Sign-Up</a></li>
                 <li class="scroll-to-section"><a href="login" class="active">Sign-In</a></li>
               {% else %}
-                <li class="scroll-to-section"><a href="#">Welcome, {{ session.get('username') }}</a></li>
+                <li class="scroll-to-section"><a href="#">Welcome {{ session.get('username') }}</a></li>
                 <li class="scroll-to-section"><a href="upload">Upload</a></li>  
+                {% if session.get('is_admin') %}
+                <li class="scroll-to-section"><a href="admin/users">Admin Panel</a></li>
+                {% endif %}
                 <li class="scroll-to-section"><a href="logout">Logout</a></li>
               {% endif %}
               <li class="scroll-to-section"><a href="aboutus">About Us</a></li>
-              <li class="scroll-to-section"><div class="main-red-button-hover"><a href="/#contact">Contact Us Now</a></div></li>
-            </ul>        
-            <a class='menu-trigger'>
-                <span>Menu</span>
-            </a>
+              <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#contact">Contact Us Now</a></div></li> 
+            </ul>
             <!-- ***** Menu End ***** -->
           </nav>
         </div>
