--- a/templates/register.html
+++ b/templates/register.html
@@ -282,19 +282,21 @@
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <ul class="nav">
-                <li class="scroll-to-section"><a href="/" >Home</a></li>
-                {% if not session.get('logged_in') %}
-                  <li class="scroll-to-section"><a href="register" class="active">Sign-Up</a></li>
-                  <li class="scroll-to-section"><a href="login">Sign-In</a></li>
-                {% else %}
-                  <li class="scroll-to-section"><a href="#">Welcome, {{ session.get('username') }}</a></li>
-                  <li class="scroll-to-section"><a href="upload">Upload</a></li>  
-                  <li class="scroll-to-section"><a href="logout">Logout</a></li>
+              <li class="scroll-to-section"><a href="/">Home</a></li>
+              {% if not session.get('logged_in') %}
+                <li class="scroll-to-section"><a href="register" class="active">Sign-Up</a></li>
+                <li class="scroll-to-section"><a href="login">Sign-In</a></li>
+              {% else %}
+                <li class="scroll-to-section"><a href="#">Welcome {{ session.get('username') }}</a></li>
+                <li class="scroll-to-section"><a href="upload">Upload</a></li>  
+                {% if session.get('is_admin') %}
+                <li class="scroll-to-section"><a href="admin/users">Admin Panel</a></li>
                 {% endif %}
-                <li class="scroll-to-section"><a href="aboutus">About Us</a></li>
-                <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#contact">Contact Us Now</a></div></li> 
-              </ul>        
+                <li class="scroll-to-section"><a href="logout">Logout</a></li>
+              {% endif %}
+              <li class="scroll-to-section"><a href="aboutus">About Us</a></li>
+              <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#contact">Contact Us Now</a></div></li> 
+            </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
             </a>
