--- a/templates/index.html
+++ b/templates/index.html
@@ -333,7 +333,7 @@
           <div class="owl-carousel owl-portfolio">
             <div class="item">
               <div class="thumb">
-                <img src="static/images/TOI.jpg" alt="" style="height: 300; width: 150;">
+                <img src="static/images/TOI.jpg" alt="" >
                 <div class="hover-effect">
                   <div class="inner-content">
                     <a rel="sponsored" href="https://templatemo.com/tm-564-plot-listing" target="_parent"><h4>2025 Research</h4></a>
@@ -380,13 +380,9 @@
                 <img src="static/15a8a78d-60e1-45bc-9605-0fa0cc4a55aa.jpeg" alt="">
                 <div class="hover-effect">
                   <div class="inner-content">
-                    <a href="#"><h4>Fourth Image</h4></a>
+                    <a href="#"><h4</h4></a>
                     <span>Text Written in Tamil</span>
                   </div>
-                </div>
-              </div>
-            </div>
-
                 </div>
               </div>
             </div>
