About footer updated

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -407,7 +407,7 @@
         <img src="static/images/footer-dec.png" alt="">
     </div>
 
-    <footer>
+    <footer style="height: 50px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
