forget password only functionality added

--- a/templates/register.html
+++ b/templates/register.html
@@ -295,7 +295,7 @@
                 <li class="scroll-to-section"><a href="logout">Logout</a></li>
               {% endif %}
               <li class="scroll-to-section"><a href="aboutus">About Us</a></li>
-              <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#contact">Contact Us Now</a></div></li> 
+               
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
@@ -368,7 +368,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="copyright">
-            <p>Copyright © 2025 DIGIPODIUM | All Rights Reserved. 
+            <p>Copyright © 2025 LOCOTO | All Rights Reserved. 
           </div>
         </div>
       </div>
