--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -412,7 +412,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="copyright">
-                        <p>Copyright © 2025 DIGIPODIUM | All Rights Reserved.</p>
+                        <p>Copyright © 2025 LOCOTO | All Rights Reserved.</p>
                     </div>
                 </div>  
             </div>
