--- a/templates/login.html
+++ b/templates/login.html
@@ -261,7 +261,6 @@
                 <li class="scroll-to-section"><a href="logout">Logout</a></li>
               {% endif %}
               <li class="scroll-to-section"><a href="aboutus">About Us</a></li>
-              <li class="scroll-to-section"><div class="main-red-button-hover"><a href="#contact">Contact Us Now</a></div></li> 
             </ul>
             <!-- ***** Menu End ***** -->
           </nav>
@@ -293,7 +292,7 @@
                 </div>
                 <div class="login-actions">
                   <button type="submit" class="login-btn">Sign in</button>
-                  <a href="#" class="forgot-password">Forgot password?</a>
+                  <a href="{{ url_for('forgot_password') }}" class="forgot-password">Forgot password?</a>
                 </div>
               </form>
             </div>
@@ -312,7 +311,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="copyright">
-            <p>Copyright © 2025 DIGIPODIUM | All Rights Reserved. 
+            <p>Copyright © 2025 LOCOTO | All Rights Reserved. 
           </div>
         </div>  
       </div>
