--- a/templates/upload.html
+++ b/templates/upload.html
@@ -658,7 +658,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="copyright">
-            <p>Copyright © 2025 DIGIPODIUM | All Rights Reserved. 
+            <p>Copyright © 2025 LOCOTO | All Rights Reserved. 
            </div>
         </div>
       </div>
